<resources>
    <string name="app_name" translatable="false">netsu</string>
    <string name="progress_dialog_loading">Loading</string>
    <string name="progress_dialog_signing_in">Signing in...</string>
    <string name="add_child">Add Child</string>
    <string name="first_name">First Name</string>
    <string name="add">Add</string>
    <string name="temperature">Temperature</string>
    <string name="next">Next</string>
    <string name="ok">Ok</string>
    <string name="memo">Memo</string>
    <string name="metric">Metric</string>
    <string name="edit_name">Edit Name</string>
    <string name="shared_pref" translatable="false">me.droan.netsu.sharedPref</string>
    <string name="medicine">Medicine</string>
    <string name="appwidget_text">EXAMPLE</string>

    <string name="add_widget">Add widget</string>
    <string name="seclect_child">Select Child</string>
    <string name="add_child_photo">add child photo</string>
    <string name="one_week">1w</string>
    <string name="share">share</string>
    <string name="hello">Hello</string>
    <string name="add_new_reading">Add new Reading</string>
    <string name="done">Done</string>
    <string name="add_profile_picture">Add profile picture</string>
    <string name="add_child_button">Add Child button</string>
    <string name="play_service_error">Google Play Services error.</string>
    <string name="create_action_using">create action using</string>
    <string name="f_at">"F at "</string>
    <string name="netsu">Netsu</string>
    <string name="reminder">Reminder</string>
    <string name="try_the_netsu_app">Try the netsu app</string>
    <string name="send_email">Send email...</string>
    <string name="no_email_client">No email client found</string>
    <string name="auth_failed">Authentication failed.</string>
</resources>
