<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/BottomSheet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/add_child"
            android:textAppearance="@style/TextAppearance.TextNameTitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/addProfilePicture"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/add_profile_picture" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <EditText
                    android:id="@+id/childNameEditTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/first_name" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/addChildBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:contentDescription="@string/add_child_button"
            android:drawableStart="@android:drawable/ic_input_add"
            android:drawableTint="@color/white"
            android:text="@string/add"
            android:textAppearance="@style/TextAppearance.TextNameTitle"
            android:textColor="@color/white" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>