<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <ImageButton
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:contentDescription="@null" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/addReadingTxtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawableStart="@drawable/ic_add_white_24dp"
            android:gravity="center_horizontal"
            android:padding="12dp"
            android:text="@string/add_new_reading"
            android:textAppearance="@style/TextAppearance.TextAddDataTitleBottomSheet" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/addTemperatureView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="46dp"

                    android:layout_height="46dp"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:src="@android:drawable/star_big_off" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:text="@string/temperature"
                    android:textAppearance="@style/TextAppearance.TextAddDataBottomSheet" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/addMemoView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:layout_gravity="center"
                    android:contentDescription="@null"

                    android:src="@android:drawable/star_big_off" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:text="@string/memo"
                    android:textAppearance="@style/TextAppearance.TextAddDataBottomSheet" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/addMedicineView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:src="@android:drawable/star_big_off" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:text="@string/medicine"
                    android:textAppearance="@style/TextAppearance.TextAddDataBottomSheet" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>